overflow issue fixed

--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,7 @@ body {
     "Arima Madurai" sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overflow-x: hidden;
 }
 
 code {
